<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="313dp"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100"
            tools:context="com.setheightwidthpercentage_android_examples.com.MainActivity"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:background="#fde200"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtvwTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/arriere_radius_top"
                    android:gravity="center_horizontal"
                    android:onClick="setVwPopup"
                    android:text="@string/txtvwGame_Title"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="45sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:background="#a3937a"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnInitPlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_arriere_radius"
                    android:text="@string/btnPlay" />

                <Button
                    android:id="@+id/btnInitConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_arriere_radius"
                    android:text="@string/btnConnect" />

                <Button
                    android:id="@+id/btnInitSubscribe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_arriere_radius"
                    android:text="@string/btnSubscribe" />

                <Space
                    android:id="@+id/spcEspacement"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/arriere_radius_bas"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnInitLeave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bas_btn_arriere"
                    android:onClick="InitialLeaveAction"
                    android:text="@string/btnLeave" />


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>