<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relayTemp1"
        android:layout_width="313dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/lnlayTemp2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100"
            tools:context="com.setheightwidthpercentage_android_examples.com.MainActivity">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:background="#fde200"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtvwTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/arriere_radius_top"
                    android:gravity="center_horizontal"
                    android:onClick="setVwPopup"
                    android:text="@string/txtvwGame_Title"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="45sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:background="#a3937a"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edttxtConUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:ems="10"
                    android:hint="@string/hntUsername"
                    android:inputType="textPersonName"
                    android:textColor="#ead7ad" />

                <EditText
                    android:id="@+id/edttxtConPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/hntPassword"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnlayTemp5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/arriere_radius_bas"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnConConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bas_btn_arriere"
                    android:text="@string/bntConnect" />

                <Button
                    android:id="@+id/btnConSubscribe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bas_btn_arriere"
                    android:text="@string/btnSubscribe" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>