<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="313dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100"
            tools:context="com.setheightwidthpercentage_android_examples.com.MainActivity">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:background="#fde200"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtvwTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/arriere_radius_top"
                    android:gravity="center_horizontal"
                    android:onClick="setVwPopup"
                    android:text="@string/txtvwGame_Title"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="45sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:background="#a3937a"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txtvwStory"
                    android:textColor="#ead7ad"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:background="@drawable/arriere_radius_bas"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/horlnlyoutBottomMenue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnErrorDemo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/bas_btn_arriere"
                        android:text="@string/btnDemo" />

                    <Button
                        android:id="@+id/btnErrorLeave"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:background="@drawable/bas_btn_arriere"
                        android:text="@string/btnLeave" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>